--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/style.css">
   <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="favicon.ico">
   <title>ポートフォリオ</title>
 </head>
@@ -16,7 +16,10 @@
       <div class="mv-table">
         <div class="mv-table-cell">
           <h2 class="mv-ttl">コーディング、WordPressのお仕事募集中です。</h2>
-          <p class="mv-txt">納期厳守、丁寧な対応で心がけています。</p>
+          <div class="mv-wrapper">
+            <p class="mv-txt">ここにテキストここにテキストここにテキストここにテキスト</p>
+            <p class="mv-txt">ここにテキスト納期厳守、丁寧な対応で心がけています。</p>
+          </div>
           <div class="btn btn--contact">
             <a href="#" class="btn__txt">お問い合わせ</a>
           </div>
