--- a/index.html
+++ b/index.html
@@ -13,6 +13,22 @@
     <title>ポートフォリオ</title>
   </head>
   <body>
+    <header class="header">
+      <div class="inner">
+        <div class="header-wrapper">
+          <h1 class="header-logo">ポートフォリオ</h1>
+          <nav class="header-nav">
+            <ul class="header-nav__list">
+              <li class="header-nav__list-item"><a href="" class="header-nav__list-link">TOP</a></li>
+              <li class="header-nav__list-item"><a href="" class="header-nav__list-link">SERVICE</a></li>
+              <li class="header-nav__list-item"><a href="" class="header-nav__list-link">PROFILE</a></li>
+              <li class="header-nav__list-item"><a href="" class="header-nav__list-link">WORKS</a></li>
+              <li class="header-nav__list-item"><a href="" class="header-nav__list-link">CONTACT</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
     <main id="main">
       <!-- メインビジュアル -->
       <section id="mv" class="mv">
