[add] 制作物セクション実装

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <!-- サービス -->
       <section id="service" class="service">
         <div class="inner">
-          <h2 class="service-ttl">Service</h2>
+          <h2 class="service-ttl">サービス</h2>
           <div class="service-list">
             <div class="service-list__item">
               <i class="service-list__icon fas fa-code"></i>
@@ -85,48 +85,56 @@
       <!-- プロフィール -->
       <section id="profile" class="profile">
         <div class="inner">
-          <h2 class="profile-ttl">Profile</h2>
+          <h2 class="profile-ttl">プロフィール</h2>
         </div>
       </section>
       <!-- 制作物 -->
       <section id="works" class="works">
         <div class="inner">
-          <h2 class="works-ttl">Works</h2>
-          <div class="service-list">
-            <div class="service-list__item">
-              <i class="service-list__icon fas fa-code"></i>
-              <div class="service-list__disc">
-                <h3 class="service-list__ttl">コーディング</h3>
-                <p class="service-list__txt">
-                  ここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキストここにテキスト
+          <h2 class="works-ttl">制作物</h2>
+          <div class="works-list">
+            <div class="works-list__item">
+              <img src="img/No image.png" alt="画像なし" class="works-list__img" />
+              <div class="works-list__disc">
+                <h3 class="works-list__ttl">Overslepts</h3>
+                <p class="works-list__txt">
+                  ポップパンクバンドOverslepts様のホームページを制作しました。
                 </p>
+                <p class="works-list__cat"><span class="works-list__cat-txt">ホームページ制作</span>/<span class="works-list__cat-txt">WordPress</span></p>
               </div>
             </div>
-            <div class="service-list__item">
-              <i class="service-list__icon fab fa-wordpress-simple"></i>
-              <div class="service-list__disc">
-                <h3 class="service-list__ttl">Wordpress制作</h3>
-                <p class="service-list__txt">
-                  すでにお持ちのHTMLのサイトにWordPressを組み込みます。お客様自身でサイトを更新できるようにカスタマイズいたします。
+            <div class="works-list__item">
+              <img src="img/No image.png" alt="画像なし" class="works-list__img" />
+              <div class="works-list__disc">
+                <h3 class="works-list__ttl">コーポレートサイト(サンプル)</h3>
+                <p class="works-list__txt">
+                  WordPressテーマを用いてコーポレートサイトを制作しました。
                 </p>
+                <p class="works-list__cat"><span class="works-list__cat-txt">ホームページ制作</span>/<span class="works-list__cat-txt">WordPress</span></p>
               </div>
             </div>
-            <div class="service-list__item">
-              <i class="service-list__icon fas fa-laptop-code"></i>
-              <div class="service-list__disc">
-                <h3 class="service-list__ttl">ホームページ・LP制作</h3>
-                <p class="service-list__txt">
-                  既存のテンプレートを利用して制作いたします。ドメインの取得からサーバへのアップロードまでご対応可能でございます。オリジナルデザインをご希望の方は、提携しているwebデザイナーと連携して制作させていただきます。
+            <div class="works-list__item">
+              <img src="img/No image.png" alt="画像なし" class="works-list__img" />
+              <div class="works-list__disc">
+                <h3 class="works-list__ttl">タイトル</h3>
+                <p class="works-list__txt">
+                  わたしはTWICEが好きです。
                 </p>
+                <p class="works-list__cat"><span class="works-list__cat-txt">LP制作</span>/<span class="works-list__cat-txt">コーディング</span></p>
               </div>
             </div>
+          </div>
+          <div class="works-btn">
+            <a href="" class="btn btn--works">
+              <p class="btn__txt">さらに制作を見る</p>
+            </a>
           </div>
         </div>
       </section>
       <!-- お問い合わせ -->
       <section id="contact" class="contact">
         <div class="inner">
-          <h2 class="contact-ttl">Contact</h2>
+          <h2 class="contact-ttl">お問い合わせ</h2>
         </div>
       </section>
     </main>
