[add] プロフィール更新

--- a/index.html
+++ b/index.html
@@ -105,53 +105,6 @@
               </p>
             </div>
           </div>
-          <!-- 経歴 -->
-          <!-- <div class="career">
-            <h3 class="career__ttl">経歴</h3>
-            <div class="accordion">
-              <div class="accordion__top">
-                <h4 class="accordion__top-ttl">
-                  2017年 <br class="br-sp" />
-                  SES企業に勤務(Javaプログラマー)<span class="accordion__toggle"><i class="fas fa-chevron-down"></i> </span>
-                </h4>
-              </div>
-              <div class="accordion__bottom">
-                <div class="profile-career__detail">
-                  <h4 class="profile-career__bottom-ttl">
-                    ［1］大手百貨店ECサイトの改修・機能追加
-                  </h4>
-                  <p class="profile-career__bottom-txt">
-                    担当: 詳細設計、コーディング、単体・結合テスト
-                  </p>
-                  <p class="profile-career__bottom-txt">
-                    使用言語等: Java、Struts、JavaScript、jsp、MySQL、TortoiseSVN、Apache Tomcat
-                  </p>
-                </div>
-                <div class="profile-career__detail">
-                  <h4 class="profile-career__bottom-txt">
-                    ［2］医療系アプリケーション開発
-                  </h4>
-                  <p class="profile-career__bottom-txt">
-                    担当: 基本設計、コーディング
-                  </p>
-                  <p class="profile-career__bottom-txt">
-                    使用言語等: Java、Spring、jsp、PostgreSQL、Apache Tomcat
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="career-accordion">
-              <div class="profile-career-accordion__top">
-                <h4 class="accordion__top-ttl">
-                  2018年 <br class="br-sp" />
-                  会計事務所に勤務(システム担当・経理)<span class="accordion__toggle"><i class="fas fa-chevron-down"></i> </span>
-                </h4>
-              </div>
-              <div class="profile-career-accordion__bottom">
-                社内ネットワークや
-              </div>
-            </div>
-          </div> -->
           <div class="career">
             <h3 class="career__ttl">経歴</h3>
             <table class="table">
@@ -191,13 +144,40 @@
                           </p>
                         </div>
                       </div>
-                      <span class="accordion-close accordion-close--career"><i class="fas fa-angle-up"></i> 閉じる</span>
                     </div>
                   </td>
                 </tr>
                 <tr class="table-th">
                   <td class="table-td career__year">2018年</td>
                   <td class="table-td">会計事務所に勤務</td>
+                </tr>
+                <tr class="table-th career-cotent">
+                  <td class="table-td"></td>
+                  <td class="table-td">
+                    <div class="career-cotent__detail">
+                      <div class="career-cotent__detail-item">
+                        <h4 class="career__content-ttl">
+                          [1]税務・会計業務
+                        </h4>
+                        <div class="career__content-textarea">
+                          <p class="career__content-txt">
+                            個々に説明
+                          </p>
+                        </div>
+                      </div>
+                      <div class="career-cotent__detail-item">
+                        <h4 class="career__content-ttl">
+                          [2]システム担当
+                        </h4>
+                        <div class="career__content-textarea">
+                          <p class="career__content-txt">
+                            社内ネットワーク、サーバ等の各種インフラの運用・保守。Excel VBAを用いたマクロの作成。<br />
+                            社員のITツールのサポートや障害対応などのヘルプデスク業務。
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </td>
                 </tr>
               </tbody>
             </table>
