[add] 営業時間を追加

--- a/index.html
+++ b/index.html
@@ -82,6 +82,82 @@
               </div>
             </div>
           </div>
+          <!-- スキル -->
+          <div class="skill">
+            <h3 class="skill__ttl">スキル</h3>
+            <div class="skill-list">
+              <ul class="owl-carousel">
+                <li class="skill__item">
+                  <div class="skill__img skill__img01"></div>
+                  <figure class="skill__name">HTML5</figure>
+                </li>
+                <li class="skill__item skill__item02">
+                  <div class="skill__img skill__img02"></div>
+                  <figure class="skill__name">CSS3</figure>
+                </li>
+                <li class="skill__item">
+                  <div class="skill__img skill__img03"></div>
+                  <figure class="skill__name">Jquery</figure>
+                </li>
+                <li class="skill__item">
+                  <div class="skill__img skill__img04"></div>
+                  <figure class="skill__name">Javascript</figure>
+                </li>
+
+                <li class="skill__item">
+                  <div class="skill__img skill__img05"></div>
+                  <figure class="skill__name">PHP</figure>
+                </li>
+                <li class="skill__item">
+                  <div class="skill__img skill__img09"></div>
+                  <figure class="skill__name">WordPress</figure>
+                </li>
+                <li class="skill__item">
+                  <div class="skill__img skill__img06"></div>
+                  <figure class="skill__name">Sass</figure>
+                </li>
+                <li class="skill__item">
+                  <div class="skill__img skill__img07"></div>
+                  <figure class="skill__name">gulp</figure>
+                </li>
+                <li class="skill__item">
+                  <div class="skill__img skill__img08"></div>
+                  <figure class="skill__name">Bootstrap4</figure>
+                </li>
+                <li class="skill__item">
+                  <div class="skill__img skill__img10"></div>
+                  <figure class="skill__name">GitHub</figure>
+                </li>
+                <li class="skill__item">
+                  <div class="skill__img skill__img11"></div>
+                  <figure class="skill__name">Photoshop</figure>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <!-- 営業時間 -->
+          <div class="biz-hour">
+            <h3 class="biz-hour">営業時間</h3>
+            <table class="table">
+              <tbody class="table-body">
+                <thead class="table-thead">
+                  <tr class="table-tr">
+                    <th class="table-th">日にち</th>
+                    <th class="table-th">時間</th>
+                  </tr>
+                </thead>
+                <tr class="table-th career-table career-th">
+                  <td class="table-td career__year">平日</td>
+
+                  <td class="table-td">6:00~9:00 19:00~23:00</td>
+                </tr>
+                <tr class="table-th">
+                  <td class="table-td career__year">土日・祝日</td>
+                  <td class="table-td">9:00~22:00</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </section>
       <!-- プロフィール -->
@@ -94,6 +170,7 @@
               <div class="sns">
                 <a href="#" class="sns__link"><i class="fab fa-twitter"></i></a>
                 <a href="https://github.com/afternoon20" class="sns__link" target="blank"><i class="fab fa-github"></i></a>
+                <a href="#" class="sns__link" target="blank"><i class="fab fa-codepen"></i></a>
               </div>
             </div>
 
@@ -181,59 +258,6 @@
                 </tr>
               </tbody>
             </table>
-          </div>
-          <!-- スキル -->
-          <div class="skill">
-            <h3 class="skill__ttl">スキル</h3>
-            <div class="skill-list">
-              <ul class="owl-carousel">
-                <li class="skill__item">
-                  <div class="skill__img skill__img01"></div>
-                  <figure class="skill__name">HTML5</figure>
-                </li>
-                <li class="skill__item skill__item02">
-                  <div class="skill__img skill__img02"></div>
-                  <figure class="skill__name">CSS3</figure>
-                </li>
-                <li class="skill__item">
-                  <div class="skill__img skill__img03"></div>
-                  <figure class="skill__name">Jquery</figure>
-                </li>
-                <li class="skill__item">
-                  <div class="skill__img skill__img04"></div>
-                  <figure class="skill__name">Javascript</figure>
-                </li>
-
-                <li class="skill__item">
-                  <div class="skill__img skill__img05"></div>
-                  <figure class="skill__name">PHP</figure>
-                </li>
-                <li class="skill__item">
-                  <div class="skill__img skill__img09"></div>
-                  <figure class="skill__name">WordPress</figure>
-                </li>
-                <li class="skill__item">
-                  <div class="skill__img skill__img06"></div>
-                  <figure class="skill__name">Sass</figure>
-                </li>
-                <li class="skill__item">
-                  <div class="skill__img skill__img07"></div>
-                  <figure class="skill__name">gulp</figure>
-                </li>
-                <li class="skill__item">
-                  <div class="skill__img skill__img08"></div>
-                  <figure class="skill__name">Bootstrap4</figure>
-                </li>
-                <li class="skill__item">
-                  <div class="skill__img skill__img10"></div>
-                  <figure class="skill__name">GitHub</figure>
-                </li>
-                <li class="skill__item">
-                  <div class="skill__img skill__img11"></div>
-                  <figure class="skill__name">Photoshop</figure>
-                </li>
-              </ul>
-            </div>
           </div>
         </div>
       </section>
