--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           </div>
 
           <!-- 営業時間 -->
-          <div class="biz-hour">
+          <!-- <div class="biz-hour">
             <h3 class="biz-hour">営業時間</h3>
             <table class="table">
               <tbody class="table-body">
@@ -105,7 +105,7 @@
                 </tr>
               </tbody>
             </table>
-          </div>
+          </div> -->
         </div>
       </section>
       <!-- プロフィール -->
@@ -118,7 +118,7 @@
               <div class="sns">
                 <a href="#" class="sns__link"><i class="fab fa-twitter"></i></a>
                 <a href="https://github.com/afternoon20" class="sns__link" target="blank"><i class="fab fa-github"></i></a>
-                <a href="#" class="sns__link" target="blank"><i class="fab fa-codepen"></i></a>
+                <a href="https://codepen.io/takocheese" class="sns__link" target="blank"><i class="fab fa-codepen"></i></a>
               </div>
             </div>
 
@@ -130,63 +130,71 @@
               </p>
             </div>
           </div>
-          <!-- スキル -->
-          <div class="skill">
-            <h3 class="skill__ttl">スキル</h3>
-            <div class="skill-list">
-              <ul class="owl-carousel">
-                <li class="skill__item">
-                  <div class="skill__img skill__img01"></div>
-                  <figure class="skill__name">HTML5</figure>
-                </li>
-                <li class="skill__item skill__item02">
-                  <div class="skill__img skill__img02"></div>
-                  <figure class="skill__name">CSS3</figure>
-                </li>
-                <li class="skill__item">
-                  <div class="skill__img skill__img03"></div>
-                  <figure class="skill__name">Jquery</figure>
-                </li>
-                <li class="skill__item">
-                  <div class="skill__img skill__img04"></div>
-                  <figure class="skill__name">Javascript</figure>
-                </li>
-
-                <li class="skill__item">
-                  <div class="skill__img skill__img05"></div>
-                  <figure class="skill__name">PHP</figure>
-                </li>
-                <li class="skill__item">
-                  <div class="skill__img skill__img09"></div>
-                  <figure class="skill__name">WordPress</figure>
-                </li>
-                <li class="skill__item">
-                  <div class="skill__img skill__img06"></div>
-                  <figure class="skill__name">Sass</figure>
-                </li>
-                <li class="skill__item">
-                  <div class="skill__img skill__img07"></div>
-                  <figure class="skill__name">gulp</figure>
-                </li>
-                <li class="skill__item">
-                  <div class="skill__img skill__img08"></div>
-                  <figure class="skill__name">Bootstrap4</figure>
-                </li>
-                <li class="skill__item">
-                  <div class="skill__img skill__img10"></div>
-                  <figure class="skill__name">GitHub</figure>
-                </li>
-                <li class="skill__item">
-                  <div class="skill__img skill__img11"></div>
-                  <figure class="skill__name">Photoshop</figure>
-                </li>
-              </ul>
-            </div>
-          </div>
           <!-- 経歴 -->
           <div class="career">
             <h3 class="career__ttl">経歴</h3>
-            <table class="table">
+            <div class="career-list">
+              <div class="career-list__item">
+                <div class="career-list__item-top">
+                  <div class="career-list__item-year">2017年</div>
+                  <div class="career-list__item-name">SES企業にJavaプログラマーとして勤務</div>
+                </div>
+                <div class="career-list__item-bottom">
+                  <div class="career-list__item-content">
+                    <div class="career-list__item-ttl-wrapper">
+                      <div class="career-list__item-ttl">[1]百貨店ECサイトの機能追加</div>
+                    </div>
+                    <p class="career-list__item-txt">担当: 詳細設計、実装、単体・結合テスト</p>
+                    <p class="career-list__item-txt">使用言語等: Java、Struts、JavaScript、jsp、MySQL、TortoiseSVN、Apache Tomcat</p>
+                  </div>
+                  <div class="career-list__item-content">
+                    <div class="career-list__item-ttl-wrapper">
+                      <div class="career-list__item-ttl">[2]医療系アプリケーション開発</div>
+                    </div>
+                    <p class="career-list__item-txt">担当: 基本設計、実装</p>
+                    <p class="career-list__item-txt">使用言語等: Java、Struts、JavaScript、jsp、MySQL、TortoiseSVN、Apache Tomcat</p>
+                  </div>
+                </div>
+                <span class="career-list__item-toggle career-list__item-toggle-open">
+                  <i class="fas fa-chevron-down career-list__item-icon"></i>
+                  <p class="career-list__item-toggle-txt">詳細を見る</p>
+                </span>
+                <span class="career-list__item-toggle career-list__item-toggle-close">
+                  <i class="fas fa-chevron-up career-list__item-icon"></i>
+                  <p class="career-list__item-toggle-txt">閉じる</p>
+                </span>
+              </div>
+              <div class="career-list__item">
+                <div class="career-list__item-top">
+                  <div class="career-list__item-year">2018年</div>
+                  <div class="career-list__item-name">会計事務所に税務・会計スタッフ、システム担当として勤務</div>
+                </div>
+                <div class="career-list__item-bottom">
+                  <div class="career-list__item-content">
+                    <div class="career-list__item-ttl-wrapper">
+                      <div class="career-list__item-ttl">[1]税務・会計業務</div>
+                    </div>
+                    <p class="career-list__item-txt">個々に説明</p>
+                  </div>
+                  <div class="career-list__item-content">
+                    <div class="career-list__item-ttl-wrapper">
+                      <div class="career-list__item-ttl">[2]システム担当</div>
+                    </div>
+                    <p class="career-list__item-txt">社内ネットワーク、サーバ等の各種インフラの運用・保守。Excel VBAを用いたマクロの作成。</p>
+                    <p class="career-list__item-txt">社員のITツールのサポートや障害対応などのヘルプデスク業務。</p>
+                  </div>
+                </div>
+                <span class="career-list__item-toggle career-list__item-toggle-open">
+                  <i class="fas fa-chevron-down career-list__item-icon"></i>
+                  <p class="career-list__item-toggle-txt">詳細を見る</p>
+                </span>
+                <span class="career-list__item-toggle career-list__item-toggle-close">
+                  <i class="fas fa-chevron-up career-list__item-icon"></i>
+                  <p class="career-list__item-toggle-txt">閉じる</p>
+                </span>
+              </div>
+            </div>
+            <!-- <table class="table">
               <tbody class="table-body">
                 <tr class="table-th career-table career-th">
                   <td class="table-td career__year">2017年</td>
@@ -259,7 +267,60 @@
                   </td>
                 </tr>
               </tbody>
-            </table>
+            </table> -->
+          </div>
+          <!-- スキル -->
+          <div class="skill">
+            <h3 class="skill__ttl">スキル</h3>
+            <div class="skill-list">
+              <ul class="owl-carousel">
+                <li class="skill__item">
+                  <div class="skill__img skill__img01"></div>
+                  <figure class="skill__name">HTML5</figure>
+                </li>
+                <li class="skill__item skill__item02">
+                  <div class="skill__img skill__img02"></div>
+                  <figure class="skill__name">CSS3</figure>
+                </li>
+                <li class="skill__item">
+                  <div class="skill__img skill__img03"></div>
+                  <figure class="skill__name">Jquery</figure>
+                </li>
+                <li class="skill__item">
+                  <div class="skill__img skill__img04"></div>
+                  <figure class="skill__name">Javascript</figure>
+                </li>
+
+                <li class="skill__item">
+                  <div class="skill__img skill__img05"></div>
+                  <figure class="skill__name">PHP</figure>
+                </li>
+                <li class="skill__item">
+                  <div class="skill__img skill__img09"></div>
+                  <figure class="skill__name">WordPress</figure>
+                </li>
+                <li class="skill__item">
+                  <div class="skill__img skill__img06"></div>
+                  <figure class="skill__name">Sass</figure>
+                </li>
+                <li class="skill__item">
+                  <div class="skill__img skill__img07"></div>
+                  <figure class="skill__name">gulp</figure>
+                </li>
+                <li class="skill__item">
+                  <div class="skill__img skill__img08"></div>
+                  <figure class="skill__name">Bootstrap4</figure>
+                </li>
+                <li class="skill__item">
+                  <div class="skill__img skill__img10"></div>
+                  <figure class="skill__name">GitHub</figure>
+                </li>
+                <li class="skill__item">
+                  <div class="skill__img skill__img11"></div>
+                  <figure class="skill__name">Photoshop</figure>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </section>
@@ -269,7 +330,7 @@
           <h2 class="works-ttl">制作物</h2>
           <div class="works-list">
             <div class="works-list__item">
-              <img src="img/dist/no-image.png" alt="画像なし" class="works-list__img" />
+              <img src="img/dist/overslepts.png" alt="Overslepts" class="works-list__img" />
               <div class="works-list__disc">
                 <h3 class="works-list__ttl">Overslepts</h3>
                 <p class="works-list__txt">
@@ -306,7 +367,7 @@
             </div>
           </div>
           <div class="works-btn">
-            <a href="" class="btn btn--works">
+            <a href="https://drive.google.com/drive/folders/1e_sqyZnynZpcdZREUjGHpUhz_QzdMd3S" class="btn btn--works" target="blank">
               <p class="btn__txt">さらに制作物を見る</p>
             </a>
           </div>
