[mod] フォントサイズ調整

--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
         <div class="inner">
           <div class="mv-table">
             <div class="mv-table-cell">
-              <h1 class="mv-ttl">コーディング、WordPressの<br class="br-tab" />お仕事お受けします。</h1>
+              <h1 class="mv-ttl">ここにタイトルここにタイトル</h1>
+              <!-- <h1 class="mv-ttl">コーディング、WordPressの<br class="br-tab" />お仕事お受けします。</h1> -->
               <div class="mv-txtarea">
-                <p class="mv-txt"></p>
-                <p class="mv-txt"></p>
+                <p class="mv-txt">はじめまして、私は都内を中心にフリー<br class="br-sp" />で活動しているWebエンジニアです。</p>
+                <p class="mv-txt">迅速な対応と丁寧なコミュニケーションを心がけています。</p>
               </div>
               <div class="btn btn--contact">
                 <a href="#" class="btn__txt">お問い合わせ</a>
@@ -135,10 +136,10 @@
             <h3 class="career__ttl">経歴</h3>
             <div class="career-list">
               <div class="career-list__item">
-                <div class="career-list__item-top">
+                <h4 class="career-list__item-top">
                   <div class="career-list__item-year">2017年</div>
                   <div class="career-list__item-name">SES企業にJavaプログラマーとして勤務</div>
-                </div>
+                </h4>
                 <div class="career-list__item-bottom">
                   <div class="career-list__item-content">
                     <div class="career-list__item-ttl-wrapper">
@@ -165,10 +166,10 @@
                 </span>
               </div>
               <div class="career-list__item">
-                <div class="career-list__item-top">
+                <h4 class="career-list__item-top">
                   <div class="career-list__item-year">2018年</div>
                   <div class="career-list__item-name">会計事務所に税務・会計スタッフ、システム担当として勤務</div>
-                </div>
+                </h4>
                 <div class="career-list__item-bottom">
                   <div class="career-list__item-content">
                     <div class="career-list__item-ttl-wrapper">
@@ -338,7 +339,7 @@
                 </p>
                 <p class="works-list__cat"><span class="works-list__cat-txt">ホームページ制作</span>/<span class="works-list__cat-txt">WordPress</span></p>
                 <div class="works-list__link">
-                  <a href="http://overslepts.starfree.jp/" class="works-list__link-txt" target="blank">サイトを見る</a>
+                  <a href="http://overslepts.starfree.jp/" class="works-list__link-txt" target="blank">サイトを見る<i class="fas fa-external-link-alt"></i></a>
                 </div>
               </div>
             </div>
@@ -351,7 +352,7 @@
                 </p>
                 <p class="works-list__cat"><span class="works-list__cat-txt">ホームページ制作</span>/<span class="works-list__cat-txt">WordPress</span></p>
                 <div class="works-list__link">
-                  <a href="http://overslepts.starfree.jp/" class="works-list__link-txt" target="blank">サイトを見る</a>
+                  <a href="http://overslepts.starfree.jp/" class="works-list__link-txt" target="blank">サイトを見る<i class="fas fa-external-link-alt"></i></a>
                 </div>
               </div>
             </div>
@@ -377,7 +378,6 @@
       <section id="contact" class="contact">
         <div class="inner">
           <h2 class="contact__ttl">お問い合わせ</h2>
-          <p class="contact__txt">kokoni</p>
           <form class="form">
             <div class="form-group">
               <input class="form__txt" type="text" />
@@ -396,6 +396,7 @@
               <div class="ripples buttonRipples"><span class="ripplesCircle"></span></div>
             </button>
           </form>
+          <p class="contact__txt">※メールやSNSからのお問い合わせも受け付けております。</p>
         </div>
       </section>
     </main>
